--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.softnobug.switchbtnmodule.SwitchsButton
-        android:id="@+id/swiftBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <!--<com.softnobug.switchbtnmodule.SwitchsButton-->
+    <!--android:id="@+id/swiftBtn"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="36dp">-->
 
-    </com.softnobug.switchbtnmodule.SwitchsButton>
+    <!--</com.softnobug.switchbtnmodule.SwitchsButton>-->
+
+    <RelativeLayout
+        android:id="@+id/rl_title"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:background="#0d87d4"
+        android:orientation="horizontal">
+
+
+        <com.softnobug.switchbtnmodule.SwitchsButton
+            android:id="@+id/swiftBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true">
+
+        </com.softnobug.switchbtnmodule.SwitchsButton>
+
+
+        <ImageView
+            android:id="@+id/img_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="right"
+
+            android:layout_marginEnd="10dp"
+            android:onClick="add" />
+    </RelativeLayout>
 
 </RelativeLayout>
