--- a/switchbtnmodule/src/main/res/drawable/switch_select_style.xml
+++ b/switchbtnmodule/src/main/res/drawable/switch_select_style.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="20dp"/>
+    <corners android:radius="18dp" />
     <solid android:color="#fff" />
-
     <stroke
         android:width="1px"
-        android:color="#E5E5E5"
-        />
+        android:color="#E5E5E5" />
 </shape>
