--- a/switchbtnmodule/src/main/res/layout/switchs_button_layout.xml
+++ b/switchbtnmodule/src/main/res/layout/switchs_button_layout.xml
@@ -15,11 +15,10 @@
 
     <Button
         android:id="@+id/curBtn"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/switch_select_style"
         android:text="正在进行"
         android:textColor="#0d87d4" />
-
 
 </RelativeLayout>
